--- a/src/app/card/card-deck/card-deck.page.html
+++ b/src/app/card/card-deck/card-deck.page.html
@@ -9,6 +9,7 @@
 <ion-content>
     <app-card-list *ngFor="let cardDeck of cardDecks"
                    [items]="cardDeck.types"
-                   [listName]="cardDeck.name">
+                   [listName]="cardDeck.name"
+                   [navigateTo]="generateUrl">
     </app-card-list>
 </ion-content>
